<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/instagram"
            android:layout_width="210dp"
            android:layout_height="70dp">
        </ImageView>

        <EditText
            android:hint="@string/username_hint"
            android:textSize="10sp"
            android:textColorHint="#ccc"
            android:textColor="#FFF"
            android:background="@drawable/style_et"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <EditText
            android:hint="@string/password_hint"
            android:textSize="10sp"
            android:textColorHint="#ccc"
            android:textColor="#FFF"
            android:background="@drawable/style_et"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:text="@string/login_btn"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAllCaps="false"
            android:background="@drawable/style_login_btn"
            android:textColor="#9F4898"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>

        <TextView
            android:text="@string/forgot_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="#fff">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">


        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="#fff"
            />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:gravity="center"
            android:text="OR"
            android:textSize="12sp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="#fff"
            android:layout_weight="1"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="bottom|center_horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/facebook"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_facebook_tv"
                android:textStyle="bold"
                android:textColor="#fff"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#22AAAAAA"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:text="@string/sigh_up_btn"/>

    </LinearLayout>

</RelativeLayout>
